# diamond-io

./: .check_availability.sh.swp  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  bla.sh  build.rs  check_availability.sh  cloud-init.sh  justfile  memory_profile.py  monitor_cpu.sh  pyproject.toml  remove.sh  run.sh
.github/workflows/: benchmark-self-hosted-no-disableupdate.yml  benchmark-self-hosted-no-ephemeral-replace.yml  benchmark-self-hosted-no-ephemeral-unattended-replace.yml  benchmark-self-hosted-no-ephemeral-unattended.yml  benchmark-self-hosted-no-ephemeral.yml  benchmark-self-hosted-no-replace.yml  benchmark-self-hosted-no-unattended-replace.yml  benchmark-self-hosted-no-unattended.yml  benchmark-self-hosted.yml  benchmark.yml  ci-self-hosted.yml  ci.yml  rust.yml
benches/: README.md  dcrtmatrix.rs  dcrtpoly.rs
dio/: Cargo.toml  README  README.md
dio/src/: circuit.rs  config.rs  main.rs  plt.rs
e2e/: dio-config.0.toml  dio-config.1-plt.toml  dio-config.1.toml  dio-config.10.toml  dio-config.13.toml  dio-config.14.toml  dio-config.15.toml  dio-config.16.toml  dio-config.17.toml  dio-config.18.toml  dio-config.19.toml  dio-config.2-plt.toml  dio-config.2.toml  dio-config.20.toml  dio-config.21.toml  dio-config.22.toml  dio-config.3.toml  dio-config.33.toml  dio-config.34.toml  dio-config.35.toml  dio-config.36.toml  dio-config.37.toml  dio-config.39.toml  dio-config.4.toml  dio-config.40.toml  dio-config.42.toml  dio-config.43.toml  dio-config.5.toml  dio-config.6.toml  dio-config.7.toml  dio-config.8.toml  dio-config.dummy-plt.toml  dio-config.dummy-width.toml  dio-config.dummy.toml  dio-config.middle.toml  dio-config.real.toml
simulator/: circuit_test.json  environment.yml  final_bits_norm_n_12_q_612.json  final_bits_norm_n_13_q_612.json  main.py  norms.py  requirements.txt
src/: bgg.rs  ciphertext.rs  circuit.rs  eval.rs  file.rs  io.rs  lib.rs  operations.rs  parameters.rs  poly.rs  pub_key.rs  storage.rs  test_utils.rs  utils.rs
src/bgg/: bit_to_int.rs  ciphertext.rs  circuit.rs  digits_to_int.rs  encoding.rs  error_simulator.rs  eval.rs  mod.rs  norm_simulator.rs  operations.rs  parameters.rs  public_key.rs  sampler.rs  utils.rs
src/bgg/circuit/: eval.rs  gate.rs  mod.rs  serde.rs  utils.rs
src/bgg/circuits/: circuit.rs  eval.rs  gate.rs  mod.rs
src/bgg/lut/: mod.rs  utils.rs  (+1 more)
src/io/: bgm.rs  composite_circuit.rs  eval.rs  mod.rs  obf.rs  params.rs  serde.rs  utils.rs
src/poly/: dcrt_matrix.rs  dcrt_poly.rs  element.rs  enc.rs  field_element.rs  gadget.rs  matrix.rs  mod.rs  params.rs  poly_matrix.rs  polynomial.rs  sampler.rs
tests/: test_bgg_pubkey.rs  test_io.rs  test_io_dummy_param.rs  test_io_dummy_param_width.rs  test_io_final_circuit.rs  test_io_middle_param.rs  test_io_plt.rs  test_io_real_param.rs
(+36 files in other folders)
