[package]
name = "diamond_io"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
license = "MIT OR Apache-2.0"

[dependencies]
openfhe = { git = "https://github.com/MachinaIO/openfhe-rs.git", branch = "feat/sampler" }
# thiserror = "2"
digest = "0.10"
num-bigint = { version = "0.4", default-features = false }
num-traits = "0.2"
# thiserror = "2.0.11"
rand = { version = "0.9.0", features = ["std_rng"] }
itertools = "0.14.0"
# serde = { version = "1.0.218", features = ["derive"] }

# TODO: for now not using

# rand = { version = "0.8.5", default-features = false, features = ["std_rng"] }
# thiserror = "2.0.11"
# serde = { version = "1.0.218", features = ["derive"] }
# nalgebra = { version = "0.33.0", features = ["rand", "sparse"] }
# serde_json = "1.0.64"
# itertools = "0.11.0"

[dev-dependencies]
keccak-asm = { version = "0.1.4" }
proptest = "1.0.0"
