[package]
name = "diamond_io"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
license = "MIT OR Apache-2.0"

[dependencies]
openfhe = { git = "https://github.com/MachinaIO/openfhe-rs.git", branch = "refactor2" }
digest = "0.10"
num-bigint = { version = "0.4", default-features = false }
num-traits = "0.2"
rayon = "1.5"
rand = { version = "0.9.0", features = ["std_rng"] }
itertools = "0.14.0"

[dev-dependencies]
keccak-asm = { version = "0.1.4" }
proptest = "1.0.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
